test/ui/src/compile_fail/std/evt_unused.rs
#![deny(unused_must_use)]

fn main() {
    emit::evt!("test");
}
