test/ui/src/compile_fail/std/evt_unused.stderr
error: unused return value of `__private_evt` that must be used
 --> src/compile_fail/std/evt_unused.rs:4:5
  |
4 |     emit::evt!("test");
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: this macro returns an `Event` without emitting it; send it through an `emit::Emitter`, or use the `emit::emit!` macro instead
note: the lint level is defined here
 --> src/compile_fail/std/evt_unused.rs:1:9
  |
1 | #![deny(unused_must_use)]
  |         ^^^^^^^^^^^^^^^
help: use `let _ = ...` to ignore the resulting value
  |
4 |     let _ = emit::evt!("test");
  |     +++++++
